# salon-site

./: Cargo.toml  README.md  index.html  tailwind.config.js  test.html
src/: app.rs  main.rs
src/components/: mod.rs
src/components/inc/: navbar.rs
src/components/pages/: home.rs  not_found.rs
styles/: input.css  output.css
