[package]
name = "salon-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.86"
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
reqwasm = "0.5.0"
chrono = { version = "0.4.24", features = ["serde", "wasmbind"] }
gloo = "0.8.0"
